{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 221,
  "lineage": "dce16c7c-1dbf-15b1-6966-dec389d83692",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "Elastic-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f723a63823d50f35",
            "arn": "arn:aws:ec2:us-west-2:862066027316:elastic-ip/eipalloc-0f723a63823d50f35",
            "association_id": "eipassoc-0c00fdcdfda1da491",
            "domain": "vpc",
            "id": "eipalloc-0f723a63823d50f35",
            "network_border_group": "us-west-2",
            "network_interface": "eni-0c037316b2fcfe02a",
            "private_dns": "ip-172-168-1-17.us-west-2.compute.internal",
            "private_ip": "172.168.1.17",
            "public_dns": "ec2-52-39-53-205.us-west-2.compute.amazonaws.com",
            "public_ip": "52.39.53.205",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "EIP"
            },
            "tags_all": {
              "Name": "EIP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "private_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cf2b4e024cdb6960",
            "arn": "arn:aws:ec2:us-west-2:862066027316:instance/i-08b02234d31341ccb",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08b02234d31341ccb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "us-west-2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01c929bc4e56b0bad",
            "private_dns": "ip-172-168-4-58.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.168.4.58",
            "public_dns": "ec2-54-186-51-139.us-west-2.compute.amazonaws.com",
            "public_ip": "54.186.51.139",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-04f764b42d2e8fc9e",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00881f06809c5bfa3",
            "tags": {
              "Name": "private-instance-1"
            },
            "tags_all": {
              "Name": "private-instance-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0aff2c0325aca62f2"
            ]
          },
          "dependencies": [
            "aws_subnet.pri-subnets",
            "aws_vpc.myvpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cf2b4e024cdb6960",
            "arn": "arn:aws:ec2:us-west-2:862066027316:instance/i-0658a0749d5ff1646",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0658a0749d5ff1646",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "us-west-2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-091797784161d825d",
            "private_dns": "ip-172-168-5-62.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.168.5.62",
            "public_dns": "ec2-34-219-161-116.us-west-2.compute.amazonaws.com",
            "public_ip": "34.219.161.116",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-087990e5420559b24",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fbbb96b06f292e68",
            "tags": {
              "Name": "private-instance-2"
            },
            "tags_all": {
              "Name": "private-instance-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0aff2c0325aca62f2"
            ]
          },
          "dependencies": [
            "aws_subnet.pri-subnets",
            "aws_vpc.myvpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cf2b4e024cdb6960",
            "arn": "arn:aws:ec2:us-west-2:862066027316:instance/i-013dcaa06f5ea96b0",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-013dcaa06f5ea96b0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "us-west-2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0203a895154d6929f",
            "private_dns": "ip-172-168-6-9.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.168.6.9",
            "public_dns": "ec2-54-214-114-25.us-west-2.compute.amazonaws.com",
            "public_ip": "54.214.114.25",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0f4ba1d2c70efbfc4",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0656241a0329e60b1",
            "tags": {
              "Name": "private-instance-3"
            },
            "tags_all": {
              "Name": "private-instance-3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0aff2c0325aca62f2"
            ]
          },
          "dependencies": [
            "aws_subnet.pri-subnets",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "public_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cf2b4e024cdb6960",
            "arn": "arn:aws:ec2:us-west-2:862066027316:instance/i-065946ebb52766950",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-065946ebb52766950",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "us-west-2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0fbda2c8339f28261",
            "private_dns": "ip-172-168-1-58.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.168.1.58",
            "public_dns": "ec2-52-36-147-36.us-west-2.compute.amazonaws.com",
            "public_ip": "52.36.147.36",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-007e20ad021651cd4",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d921381a30bc19c3",
            "tags": {
              "Name": "public-instance-1"
            },
            "tags_all": {
              "Name": "public-instance-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0aff2c0325aca62f2"
            ]
          },
          "dependencies": [
            "aws_subnet.pub-subnets",
            "aws_vpc.myvpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cf2b4e024cdb6960",
            "arn": "arn:aws:ec2:us-west-2:862066027316:instance/i-0b38df240bb149b08",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b38df240bb149b08",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "us-west-2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ff2e0a73ce47ce56",
            "private_dns": "ip-172-168-2-60.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.168.2.60",
            "public_dns": "ec2-54-201-189-230.us-west-2.compute.amazonaws.com",
            "public_ip": "54.201.189.230",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0deb84a38f0b04898",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0996875c87a7a010e",
            "tags": {
              "Name": "public-instance-2"
            },
            "tags_all": {
              "Name": "public-instance-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0aff2c0325aca62f2"
            ]
          },
          "dependencies": [
            "aws_subnet.pub-subnets",
            "aws_vpc.myvpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cf2b4e024cdb6960",
            "arn": "arn:aws:ec2:us-west-2:862066027316:instance/i-04674f8a6ea282f7e",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04674f8a6ea282f7e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "us-west-2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03cb74ffe31119e81",
            "private_dns": "ip-172-168-3-49.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.168.3.49",
            "public_dns": "ec2-18-236-222-187.us-west-2.compute.amazonaws.com",
            "public_ip": "18.236.222.187",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0f72e933a2d1ad322",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-042e5fc225fabe76f",
            "tags": {
              "Name": "public-instance-3"
            },
            "tags_all": {
              "Name": "public-instance-3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0aff2c0325aca62f2"
            ]
          },
          "dependencies": [
            "aws_subnet.pub-subnets",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "first_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:862066027316:internet-gateway/igw-08f43de1e79ccd0fc",
            "id": "igw-08f43de1e79ccd0fc",
            "owner_id": "862066027316",
            "tags": {
              "Name": "MyIGW"
            },
            "tags_all": {
              "Name": "MyIGW"
            },
            "vpc_id": "vpc-0110b4ecf911eaaea"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NATGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f723a63823d50f35",
            "association_id": "eipassoc-0c00fdcdfda1da491",
            "connectivity_type": "public",
            "id": "nat-0156832279cf64af4",
            "network_interface_id": "eni-0c037316b2fcfe02a",
            "private_ip": "172.168.1.17",
            "public_ip": "52.39.53.205",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0d921381a30bc19c3",
            "tags": {
              "Name": "NATGW"
            },
            "tags_all": {
              "Name": "NATGW"
            }
          },
          "dependencies": [
            "aws_eip.Elastic-ip",
            "aws_subnet.pub-subnets",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pri-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:862066027316:route-table/rtb-0991c97337a153328",
            "id": "rtb-0991c97337a153328",
            "owner_id": "862066027316",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0156832279cf64af4",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "function-vpc-pri-rt"
            },
            "tags_all": {
              "Name": "function-vpc-pri-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0110b4ecf911eaaea"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.Elastic-ip",
            "aws_nat_gateway.NATGW",
            "aws_subnet.pub-subnets",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:862066027316:route-table/rtb-05cb989cea63c3562",
            "id": "rtb-05cb989cea63c3562",
            "owner_id": "862066027316",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08f43de1e79ccd0fc",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "function-vpc-pub-rt"
            },
            "tags_all": {
              "Name": "function-vpc-pub-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0110b4ecf911eaaea"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.first_igw",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pri",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fe48abc9293aba82",
            "route_table_id": "rtb-0991c97337a153328",
            "subnet_id": "subnet-00881f06809c5bfa3"
          },
          "dependencies": [
            "aws_eip.Elastic-ip",
            "aws_nat_gateway.NATGW",
            "aws_route_table.pri-rt",
            "aws_subnet.pri-subnets",
            "aws_subnet.pub-subnets",
            "aws_vpc.myvpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f970a7bda2729625",
            "route_table_id": "rtb-0991c97337a153328",
            "subnet_id": "subnet-0fbbb96b06f292e68"
          },
          "dependencies": [
            "aws_eip.Elastic-ip",
            "aws_nat_gateway.NATGW",
            "aws_route_table.pri-rt",
            "aws_subnet.pri-subnets",
            "aws_subnet.pub-subnets",
            "aws_vpc.myvpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f52eb7e83ca70144",
            "route_table_id": "rtb-0991c97337a153328",
            "subnet_id": "subnet-0656241a0329e60b1"
          },
          "dependencies": [
            "aws_eip.Elastic-ip",
            "aws_nat_gateway.NATGW",
            "aws_route_table.pri-rt",
            "aws_subnet.pri-subnets",
            "aws_subnet.pub-subnets",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a6209a38c41ce3ff",
            "route_table_id": "rtb-05cb989cea63c3562",
            "subnet_id": "subnet-0d921381a30bc19c3"
          },
          "dependencies": [
            "aws_internet_gateway.first_igw",
            "aws_route_table.pub-rt",
            "aws_subnet.pub-subnets",
            "aws_vpc.myvpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-038d540404ddb2fbe",
            "route_table_id": "rtb-05cb989cea63c3562",
            "subnet_id": "subnet-0996875c87a7a010e"
          },
          "dependencies": [
            "aws_internet_gateway.first_igw",
            "aws_route_table.pub-rt",
            "aws_subnet.pub-subnets",
            "aws_vpc.myvpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dac0b77e79ae3526",
            "route_table_id": "rtb-05cb989cea63c3562",
            "subnet_id": "subnet-042e5fc225fabe76f"
          },
          "dependencies": [
            "aws_internet_gateway.first_igw",
            "aws_route_table.pub-rt",
            "aws_subnet.pub-subnets",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pri-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-west-2a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:862066027316:subnet/subnet-00881f06809c5bfa3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "172.168.4.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00881f06809c5bfa3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "862066027316",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "function-vpc-pri-sub-us-west-2a"
            },
            "tags_all": {
              "Name": "function-vpc-pri-sub-us-west-2a"
            },
            "vpc_id": "vpc-0110b4ecf911eaaea"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        },
        {
          "index_key": "us-west-2b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:862066027316:subnet/subnet-0fbbb96b06f292e68",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "172.168.5.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fbbb96b06f292e68",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "862066027316",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "function-vpc-pri-sub-us-west-2b"
            },
            "tags_all": {
              "Name": "function-vpc-pri-sub-us-west-2b"
            },
            "vpc_id": "vpc-0110b4ecf911eaaea"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        },
        {
          "index_key": "us-west-2c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:862066027316:subnet/subnet-0656241a0329e60b1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "172.168.6.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0656241a0329e60b1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "862066027316",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "function-vpc-pri-sub-us-west-2c"
            },
            "tags_all": {
              "Name": "function-vpc-pri-sub-us-west-2c"
            },
            "vpc_id": "vpc-0110b4ecf911eaaea"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-west-2a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:862066027316:subnet/subnet-0d921381a30bc19c3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "172.168.1.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d921381a30bc19c3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "862066027316",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "function-vpc-pub-sub-us-west-2a"
            },
            "tags_all": {
              "Name": "function-vpc-pub-sub-us-west-2a"
            },
            "vpc_id": "vpc-0110b4ecf911eaaea"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        },
        {
          "index_key": "us-west-2b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:862066027316:subnet/subnet-0996875c87a7a010e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "172.168.2.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0996875c87a7a010e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "862066027316",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "function-vpc-pub-sub-us-west-2b"
            },
            "tags_all": {
              "Name": "function-vpc-pub-sub-us-west-2b"
            },
            "vpc_id": "vpc-0110b4ecf911eaaea"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        },
        {
          "index_key": "us-west-2c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:862066027316:subnet/subnet-042e5fc225fabe76f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "172.168.3.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-042e5fc225fabe76f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "862066027316",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "function-vpc-pub-sub-us-west-2c"
            },
            "tags_all": {
              "Name": "function-vpc-pub-sub-us-west-2c"
            },
            "vpc_id": "vpc-0110b4ecf911eaaea"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:862066027316:vpc/vpc-0110b4ecf911eaaea",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.168.0.0/16",
            "default_network_acl_id": "acl-062828e7b359105f1",
            "default_route_table_id": "rtb-0be358b871f72df3e",
            "default_security_group_id": "sg-0aff2c0325aca62f2",
            "dhcp_options_id": "dopt-0ac8860337b447536",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0110b4ecf911eaaea",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0be358b871f72df3e",
            "owner_id": "862066027316",
            "tags": {
              "Name": "function-vpc"
            },
            "tags_all": {
              "Name": "function-vpc"
            }
          }
        }
      ]
    }
  ]
}